--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-local-notification": "git+https://github.com/katzer/cordova-plugin-local-notifications.git",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "es6-promise-plugin": "^4.2.2"
   },
   "devDependencies": {
@@ -27,7 +28,8 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-local-notification": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-splashscreen": {}
     },
     "platforms": [
       "android"
